--- a/docs/Base/1.1.3.Decision.md
+++ b/docs/Base/1.1.3.Decision.md
@@ -84,4 +84,4 @@ A ideia C obteve a maior média ponderada (5.00), destacando-se em todos os crit
 
 | Versão | Alteração                  | Responsável     | Revisor | Data       | Detalhes da Revisão |
 | -      | -                          | -               | -       | -          | -                   |
-| 1.0    | Elaboração do documento | [Júlio Cesra](https://github.com/Julio1099) e [Ferando Gabriel](https://github.com/show-dawn)| | 10/04/2025 | |
+| 1.0    | Elaboração do documento | [Júlio Cesar](https://github.com/Julio1099) e [Fernando Gabriel](https://github.com/show-dawn)| | 10/04/2025 | |
