--- a/docs/Base/1.1.3.Decision.md
+++ b/docs/Base/1.1.3.Decision.md
@@ -80,8 +80,18 @@ A ideia C obteve a maior média ponderada (5.00), destacando-se em todos os crit
 - Definir os componentes do protótipo.
 - Preparar para o Dia 4 – Prototipar.
 
+## Referências
+
+SERRANO, Milene. *Arquitetura e Desenho de Software. AULA - PROJETO E DESENHO DE SOFTWARE.* Apresentação em Slide, 42 slides, p. [inserir páginas do conteúdo]. Disponível em: [slides](https://aprender3.unb.br/pluginfile.php/3070928/mod_page/content/5/Arquitetura%20e%20Desenho%20de%20software%20-%20Aula%20Projeto-DSW%20-%20Profa.%20Milene.pdf). Acesso em: 09/04/2025.
+
+KNAPP, Jake; ZERATSKY, John; KOWITZ, Braden. *Sprint: O método usado no Google para testar e aplicar novas ideias em apenas cinco dias.* Rio de Janeiro: Editora Intrínseca, 2016.
+
+GV. *Design Sprint*. Disponível em: [https://www.gv.com/sprint/](https://www.gv.com/sprint/). Acesso em: 10 abr. 2025.
+
+
 ## Histórico de versão:
 
 | Versão | Alteração                  | Responsável     | Revisor | Data       | Detalhes da Revisão |
 | -      | -                          | -               | -       | -          | -                   |
 | 1.0    | Elaboração do documento | [Júlio Cesar](https://github.com/Julio1099) e [Fernando Gabriel](https://github.com/show-dawn)| | 10/04/2025 | |
+| 1.1    | Adiciona Referências | [Júlio Cesar](https://github.com/Julio1099) e [Fernando Gabriel](https://github.com/show-dawn)| | 10/04/2025 | |
