--- a/docs/Base/1.2.4.EstimativaCusto.md
+++ b/docs/Base/1.2.4.EstimativaCusto.md
@@ -6,7 +6,7 @@ O plano de gerenciamento dos custos estabelece a estrutura e define as atividade
 
 ## Custo Pessoal
 
-| Função | Quantida| Salário | Valor mensal total| Tempo de execução do projeto| Valor Total|
+| Função | Quantidade| Salário | Valor mensal total| Tempo de execução do projeto| Valor Total|
 |:------:|:------:|:------:|:------:|:------:|:------:|
 | Equipe de desenvolvimento | 10 | R$ 5.500 | R$ 55.000| 4 |R$ 220.000|
 
@@ -31,4 +31,4 @@ Internet Banda Larga com Fibra Ótica. OI .Disponível em: https://www.oi.com.br
 
 | Versão | Alteração                  | Responsável     | Revisor | Data       | Detalhes da Revisão |
 | -      | -                          | -               | -       | -          | -                   |
-| 1.0    | Elaboração do documento | [Igor Thiago](https://github.com/Igor-Thiago) e [Henrique Galdino](https://github.com/vcpVitor)| | 10/04/2025 | |
+| 1.0    | Elaboração do documento | [Igor Thiago](https://github.com/Igor-Thiago) e [Henrique Galdino](https://github.com/hgaldino05)| | 10/04/2025 | |
