Adding individual RP

--- a/docs/Base/1.2.3.RichPicture.md
+++ b/docs/Base/1.2.3.RichPicture.md
@@ -1,16 +1,28 @@
 ## Introdução
 
-O Rich Picture é uma técnica visual que utiliza desenhos e textos curtos para representar ideias e processos de forma simplificada. Segundo Serrano, essa abordagem colaborativa é especialmente útil em reuniões com clientes e equipes de desenvolvimento, pois facilita o entendimento de conceitos complexos e o alinhamento entre os envolvidos. Por sua natureza dinâmica e informal, o Rich Picture se mostra eficaz nas etapas iniciais de projetos, auxiliando na identificação de requisitos e na modelagem de soluções.
+O Rich Picture é uma técnica visual que utiliza desenhos e textos curtos para representar ideias e processos de forma simplificada [(SERRANO)](#referência). Segundo Serrano, essa abordagem colaborativa é especialmente útil em reuniões com clientes e equipes de desenvolvimento, pois facilita o entendimento de conceitos complexos e o alinhamento entre os envolvidos. Por sua natureza dinâmica e informal, o Rich Picture se mostra eficaz nas etapas iniciais de projetos, auxiliando na identificação de requisitos e na modelagem de soluções.
 
 
 ## Metodologia
 
+Inicialmente, cada membro da equipe elaborou individualmente seu próprio Rich Picture, representando sua visão pessoal sobre o projeto. Em seguida, reunimos todas as versões para análise comparativa, identificando tanto os pontos convergentes quanto as perspectivas divergentes. Após um debate estruturado, no qual discutimos os diferentes enfoques e interpretações, consolidamos as ideias mais relevantes em uma versão final unificada. Essa abordagem colaborativa permitiu não apenas sintetizar as melhores contribuições individuais, mas também garantir um alinhamento conceitual entre todos os participantes.
 
+## Rich Pictures Individuais
 
-## Rich Pictures
+![Rich Picture Rodrigo Orlandi](../Imagens/rodOrichpic.jpeg)
+Figura 1: Rich Picture de [Rodrigo Orlandi](https://github.com/orlandirodrigo)
 
-![Rich Picture](../Imagens/richpicturefinal.png)
+![Rich Picture João Paulo](../Imagens/JoaoPaulorichpicture.png)
+Figura 2: Rich Picture de [João Paulo Monteiro](https://github.com/joaombc)
 
+![Rich Picture Júlio Cesar](../Imagens/juliorichpic.jpeg)
+Figura 3: Rich Picture de [Júlio Cesar](https://github.com/Julio1099)
+
+![Rich Picture Igor Thiago](../Imagens/igorRP.jpeg)
+Figura 4: Rich Picture de [Igor Thiago]()
+
+![Rich Picture Fernando Gabriel](../Imagens/fernandoRP.jpeg)
+Figura 4: Rich Picture de [Fernando Gabriel](https://github.com/show-dawn)
 
 ## Referência
 
@@ -20,4 +32,4 @@ O Rich Picture é uma técnica visual que utiliza desenhos e textos curtos para 
 
 | Versão | Alteração                  | Responsável     | Revisor | Data       | Detalhes da Revisão |
 | -      | -                          | -               | -       | -          | -                   |
-| 1.0    | Elaboração do documento |  [Rodrigo Gontijo](https://github.com/rodrigogontijoo) e [João Paulo Monteiro](https://github.com/joaombc) | | 10/04/2025 | |
+| 1.0    | Elaboração do documento |  [Rodrigo Gontijo](https://github.com/rodrigogontijoo) e [João Paulo Monteiro](https://github.com/joaombc) | [Rodrigo Orlandi](https://github.com/orlandirodrigo) | 10/04/2025 | |
