add rich pictures

--- a/docs/Base/1.2.3.RichPicture.md
+++ b/docs/Base/1.2.3.RichPicture.md
@@ -9,20 +9,33 @@ Inicialmente, cada membro da equipe elaborou individualmente seu próprio Rich P
 
 ## Rich Pictures Individuais
 
-![Rich Picture Rodrigo Orlandi](../Imagens/rodOrichpic.jpeg)
-Figura 1: Rich Picture de [Rodrigo Orlandi](https://github.com/orlandirodrigo)
+![Rich Picture Fernando Gabriel](../Imagens/fernandoRP.jpeg)
+Figura 1: Rich Picture de [Fernando Gabriel](https://github.com/show-dawn)
 
-![Rich Picture João Paulo](../Imagens/JoaoPaulorichpicture.png)
-Figura 2: Rich Picture de [João Paulo Monteiro](https://github.com/joaombc)
-
-![Rich Picture Júlio Cesar](../Imagens/juliorichpic.jpeg)
-Figura 3: Rich Picture de [Júlio Cesar](https://github.com/Julio1099)
+![Rich Picture Henrique Galdino](../Imagens/RP-henrique.jpeg)
+Figura 2: Rich Picture de [Henrique Galdino](https://github.com/hgaldino05)
 
 ![Rich Picture Igor Thiago](../Imagens/igorRP.jpeg)
-Figura 4: Rich Picture de [Igor Thiago]()
+Figura 3: Rich Picture de [Igor Thiago](https://github.com/Igor-Thiago)
 
-![Rich Picture Fernando Gabriel](../Imagens/fernandoRP.jpeg)
-Figura 4: Rich Picture de [Fernando Gabriel](https://github.com/show-dawn)
+![Rich Picture João Paulo](../Imagens/JoaoPaulorichpicture.png)
+Figura 4: Rich Picture de [João Paulo Monteiro](https://github.com/joaombc)
+
+![Rich Picture Júlio Cesar](../Imagens/juliorichpic.jpeg)
+Figura 5: Rich Picture de [Júlio Cesar](https://github.com/Julio1099)
+
+![Rich Picture Matheus Ferreira](../Imagens/RP-matheus.jpeg)
+Figura 6: Rich Picture de [Matheus Ferreira](https://github.com/matferreira1)
+
+![Rich Picture Rodrigo Orlandi](../Imagens/rodOrichpic.jpeg)
+Figura 7: Rich Picture de [Rodrigo Orlandi](https://github.com/orlandirodrigo)
+
+![Rich Picture Rodrigo Gontijo](../Imagens/RP-rodrigo-gontijo.jpeg)
+Figura 8: Rich Picture de [Rodrigo Gontijo](https://github.com/rodrigogontijoo)
+
+![Rich Picture Vitor Pereira](../Imagens/RP-vitor.jpeg)
+Figura 9: Rich Picture de [Vitor Pereira](https://github.com/vcpVitor)
+
 
 ## Referência
 
@@ -32,4 +45,5 @@ Figura 4: Rich Picture de [Fernando Gabriel](https://github.com/show-dawn)
 
 | Versão | Alteração                  | Responsável     | Revisor | Data       | Detalhes da Revisão |
 | -      | -                          | -               | -       | -          | -                   |
+| 1.1    | Adição Rich Pictures Restantes | [Rodrigo Gontijo](https://github.com/rodrigogontijoo)| | 11/04/2025 | |
 | 1.0    | Elaboração do documento |  [Rodrigo Gontijo](https://github.com/rodrigogontijoo) e [João Paulo Monteiro](https://github.com/joaombc) | [Rodrigo Orlandi](https://github.com/orlandirodrigo) | 10/04/2025 | |
