Add custo de Aquisicao

--- a/docs/Base/1.2.4.EstimativaCusto.md
+++ b/docs/Base/1.2.4.EstimativaCusto.md
@@ -12,13 +12,14 @@ O plano de gerenciamento dos custos estabelece a estrutura e define as atividade
 
 ## Custo de Aquisição
 
-São considerados os custos referentes a equipamentos, infraestrutura de trabalho, deslocamento e alimentação. No caso dos equipamentos, a equipe determinou um tipo de desktop que atendesse todas as condições necessárias para o desenvolvimento e um plano de internet que seja bom o suficiente 
+São considerados os custos referentes a equipamentos, infraestrutura de trabalho, deslocamento e alimentação. No caso dos equipamentos, a equipe determinou um tipo de desktop que atendesse todas as condições necessárias para o desenvolvimento, um kit de mouse/fone e um plano de internet que seja bom o suficiente 
 
 |Produto/Equipamento | Quantidade |Valor Unitário |Valor mensal | Tempo de execução do projeto|Valor Total|
 |:----:|:----:|:----:|:----:|:------:|:------:|
 |Notebook|10|R$ 4.699,0| - | - | R$ 46.990,0|
 |Internet|10|R$ 89,90| R$ 890,00 | 4 | R$ 3.560,00|
-|Total|-|-|-|-| R$ 38.639,02|
+|Kit trabalho|10|R$ 123,50| - | - |R$ 1235,0|
+|Total|-|-|-|-| R$ 51.785,0|
 
 ## Referência
 
