--- a/docs/Base/1.2.4.EstimativaCusto.md
+++ b/docs/Base/1.2.4.EstimativaCusto.md
@@ -21,11 +21,22 @@ São considerados os custos referentes a equipamentos, infraestrutura de trabalh
 |Kit trabalho|10|R$ 123,50| - | - |R$ 1235,0|
 |Total|-|-|-|-| R$ 51.785,0|
 
+## Custo Total do Projeto
+
+|Custo |Valor|
+|:----:|:----:|
+|Custo Pessoal|R$ 220.000|
+|Ferramentas|R$ 51.785,0|
+|20% de Riscos| R$ 54.357,0|
+|50% de Lucro|R$ 135.892,5|
+|Valor total do projeto| R$ 462.034,0 |
+
 ## Referência
 
 Quanto ganha um desenvolvedor?. Salário Médio de Desenvolvedor.Disponível em: https://br.talent.com/salary?job=desenvolvedor+pleno. Acesso em: 10 abril. 2025.         
 Notebook Inspiron 15. Dell .Disponível em: https://www.dell.com/pt-br/shop/cty/pdp/spd/inspiron-15-3520-laptop/i3520w1014w?tfcid=31768715&gacd=9657105-15015-5761040-275878141-0&dgc=ST&cid=71700000119341461&gad_source=1&gclid=Cj0KCQjw2N2_BhCAARIsAK4pEkUeYORhP48LFx55vQ1nRoNKOZ-CkCA1oMRW6W_zRoPKgJZrZx7WdV4aAvChEALw_wcB&gclsrc=aw.ds. Acesso em: 10 abril. 2025.      
 Internet Banda Larga com Fibra Ótica. OI .Disponível em: https://www.oi.com.br/internet?gad_source=1&gclid=Cj0KCQjw2N2_BhCAARIsAK4pEkW6oDlIACJEqgDgv52R6c2-fpmAKcz0aRVnOx4AcP5NptnItFb4-lcaAqEEEALw_wcB&gclsrc=aw.ds. Acesso em: 10 abril. 2025.
+Kit Mouse 7 Botões + Headset Gamer + Mousepad Gamer Barato. Mercado Livre .Disponível em: https://produto.mercadolivre.com.br/MLB-2607319732-kit-mouse-7-botoes-headset-gamer-mousepad-gamer-barato-_JM?matt_tool=13560550&matt_internal_campaign_id=&matt_word=&matt_source=google&matt_campaign_id=22120855569&matt_ad_group_id=179138690771&matt_match_type=&matt_network=g&matt_device=c&matt_creative=729092955358&matt_keyword=&matt_ad_position=&matt_ad_type=pla&matt_merchant_id=299511603&matt_product_id=MLB2607319732&matt_product_partition_id=2584316702352&matt_target_id=aud-1966981570049:pla-2584316702352&cq_src=google_ads&cq_cmp=22120855569&cq_net=g&cq_plt=gp&cq_med=pla&gad_source=1&gclid=CjwKCAjw--K_BhB5EiwAuwYoynBy2UMCTI21jzNA-EgbJyM-zWB-1MD7Nnj2d11cy0748YAelXdfexoCdpQQAvD_BwE. Acesso em: 11 abril. 2025.
 
 
 ## Histórico de versão:
