add e corrigir introdução e metodologia Rich picture Generalista

--- a/docs/Base/1.2.3.RichPicture.md
+++ b/docs/Base/1.2.3.RichPicture.md
@@ -1,11 +1,13 @@
 ## Introdução
 
-O Rich Picture é uma técnica visual que utiliza desenhos e textos curtos para representar ideias e processos de forma simplificada [(SERRANO)](#referência). Segundo Serrano, essa abordagem colaborativa é especialmente útil em reuniões com clientes e equipes de desenvolvimento, pois facilita o entendimento de conceitos complexos e o alinhamento entre os envolvidos. Por sua natureza dinâmica e informal, o Rich Picture se mostra eficaz nas etapas iniciais de projetos, auxiliando na identificação de requisitos e na modelagem de soluções.
+O Rich Picture é uma técnica visual que utiliza desenhos e textos curtos para representar ideias e processos de forma simplificada [(SERRANO)](#referência). Essa abordagem colaborativa é especialmente útil em reuniões com clientes e equipes de desenvolvimento, pois facilita o entendimento de conceitos complexos e o alinhamento entre os envolvidos. Por sua natureza dinâmica e informal, o Rich Picture se mostra eficaz nas etapas iniciais de projetos, auxiliando na identificação de requisitos e na modelagem de soluções.
+
+Neste projeto, a utilização de Rich Pictures se deu em duas fases; na fase 2 da Design Sprint, Sketch, seu uso foi dividido em Rich Pictures individuais, a partir dos quais seria acordado o melhor modelo na fase 3 da Design Sprint, Decide, resultando no desenvolvimento de uma Rich Picture final relativa ao projeto.  
 
 
 ## Metodologia
 
-Inicialmente, cada membro da equipe elaborou individualmente seu próprio Rich Picture, representando sua visão pessoal sobre o projeto. Em seguida, reunimos todas as versões para análise comparativa, identificando tanto os pontos convergentes quanto as perspectivas divergentes. Após um debate estruturado, no qual discutimos os diferentes enfoques e interpretações, consolidamos as ideias mais relevantes em uma versão final unificada. Essa abordagem colaborativa permitiu não apenas sintetizar as melhores contribuições individuais, mas também garantir um alinhamento conceitual entre todos os participantes.
+No projeto, o [Unpack](1.1.1.Unpack.md#111-entender-unpack) foi realizado em grupo, mas as etapas foram todas divididas a serem documentadas em duplas. Este caso não seguia o ideal da Design Sprint, a qual requer que no mínimo, as etapas 1 a 3 - Unpack, Sketch e Decide - sejam realizadas em grupo. Para efetivar a correção, as Rich Pictures individuais foram desenvolvidas em 10/04/2025 e coletadas neste arquivo, para então serem escolhidas e ranqueadas no Decide.
 
 ## Rich Pictures Individuais
 
@@ -45,5 +47,6 @@ Figura 9: Rich Picture de [Vitor Pereira](https://github.com/vcpVitor)
 
 | Versão | Alteração                  | Responsável     | Revisor | Data       | Detalhes da Revisão |
 | -      | -                          | -               | -       | -          | -                   |
+| 1.2    | Adicionar detalhes na Introdução e Metodologia | [Rodrigo Orlandi](https://github.com/orlandirodrigo) | - | 11/04/2025 | |
 | 1.1    | Adição Rich Pictures Restantes | [Rodrigo Gontijo](https://github.com/rodrigogontijoo)| | 11/04/2025 | |
-| 1.0    | Elaboração do documento |  [Rodrigo Gontijo](https://github.com/rodrigogontijoo) e [João Paulo Monteiro](https://github.com/joaombc) | [Rodrigo Orlandi](https://github.com/orlandirodrigo) | 10/04/2025 | |
+| 1.0    | Elaboração do documento |  [Rodrigo Gontijo](https://github.com/rodrigogontijoo), [João Paulo Monteiro](https://github.com/joaombc) e [Rodrigo Orlandi](https://github.com/orlandirodrigo) |  | 10/04/2025 | |
