--- a/docs/Base/1.2.4.Glossario.md
+++ b/docs/Base/1.2.4.Glossario.md
@@ -52,4 +52,4 @@ A elaboração do glossário para a aplicação "Eu Sei Quero Compartilhar" pode
 |--------|------------|------------------------------------------------|-----------------------------------------------------------|------------------------------------|
 | 1.0    | 10/04/2025 | Criação do documento                           | [Matheus Ferreira](https://github.com/matferreira1)             | [Matheus Ferreira](https://github.com/matferreira1)  |
 | 1.1    | 10/04/2025 | Alteração de léxico para glossário                          | [Matheus Ferreira](https://github.com/matferreira1)             | [Rodrigo Gontijo](https://github.com/rodrigogontijoo)  |
-| 1.2    |  11/04/2025  | Adição e Organização de Termos |[Rodrigo Gontijo](https://github.com/rodrigogontijoo) || |
+| 1.2    |  11/04/2025  | Adição e Organização de Termos |[Rodrigo Gontijo](https://github.com/rodrigogontijoo) || [Matheus Ferreira](https://github.com/matferreira1)|
