--- a/docs/Base/1.2.2.5W2H.md
+++ b/docs/Base/1.2.2.5W2H.md
@@ -27,7 +27,7 @@ Após a realização do [Unpack](1.1.DesignSprint.md#11-módulo-design-sprint) n
 | Onde           | De maneira presencial, na Faculdade de Ciência e Tecnologia em Engenharias (FCTE), e majoritariamente de maneira remota, nas casas dos participantes. |
 | Quando         | O desenvolvimento do projeto se dará no período de 07/04/2025 a 27/07/2025, ao longo do semestre letivo de 2025/1.|
 | Como           | As principais ferramentas a serem utilizadas no projeto são: <br> - VSCode, para desenvolvimento de arquivos Markdown(MD) e código; <br> - Github, para manter a documentação do projeto e traçar as entregas de cada participante; <br> - Github Pages, para manter no ar a Wiki do projeto; <br> - Linguagem de programação ainda não definida, para desenvolver o aplicativo Web; <br> - Google Drive, para manter arquivos de reuniões; <br> - YouTube, para manter gravações de reuniões; <br> - WhatsApp, para comunicação generalizada; <br> - Discord/Google Meet, para reuniões remotas. |
-| Quanto          | 2 reais kkk   |
+| Quanto          | A quantidade está planejada para não haver gastos monetários.  |
 
 /// caption | <
 Tabela 1 — Aplicação da Framework 5W2H no projeto de Arquitetura de Software da Equipe 5, Turma 2 do Semestre 2025/1.
