add rich picture restante

--- a/docs/Base/1.2.3.RichPicture.md
+++ b/docs/Base/1.2.3.RichPicture.md
@@ -38,6 +38,9 @@ Figura 8: Rich Picture de [Rodrigo Gontijo](https://github.com/rodrigogontijoo)
 ![Rich Picture Vitor Pereira](../Imagens/RP-vitor.jpeg)
 Figura 9: Rich Picture de [Vitor Pereira](https://github.com/vcpVitor)
 
+![Rich Picture João Victor](../Imagens/RP-JV.jpeg)
+Figura 10: Rich Picture de [João Victor](https://github.com/jmarquees)
+
 
 ## Referência
 
