Add mais texto, referência

--- a/docs/Base/1.2.1.MapaMental.md
+++ b/docs/Base/1.2.1.MapaMental.md
@@ -2,9 +2,11 @@
 
 ## Introdução
 
-O mapa mental é um artefato visual utilizado para representar e organizar informações de forma hierárquica e associativa, partindo de um conceito central e ramificando-se em tópicos e subtópicos relacionados. 
+O mapa mental é um artefato visual utilizado para representar e organizar informações de forma hierárquica e associativa, partindo de um conceito central e ramificando-se em tópicos e subtópicos relacionados.
 
-## Mapa Mental
+Os mapas mentais podem ser desenvolvidos de diversas maneiras a fim de servir a significados diferentes, e seu uso dentro do contexto de desenvolvimento de software é o mesmo. Tópicos e subtópicos relacionados podem representar quaisquer conceitos, desde conceitos mais abstratos, como produtividade e criatividade, a conceitos mais concretos, como palavras-chave, divisões do projeto em fase, entre outras [(SERRANO)](#referência).
+
+## Metodologia
 
 Como resultado da etapa [Unpack](/Base/1.1.1.Unpack.md), foi o criado o seguinte mapa mental, que ilustra as principais partes da aplicação.
 
@@ -16,8 +18,13 @@ Figura 1 - Mapa Mental (Fonte: Rodrigo Gontijo, Vitor Pereira)
 
 </center>
 
+## Referência
+
+SERRANO, Milene. **Arquitetura e Desenho de Software**. AULA - PROJETO E DESENHO DE SOFTWARE. Apresentação em Slide, 49 Slides, p 21-23. Disponível em: https://aprender3.unb.br/pluginfile.php/3070928/mod_page/content/5/Arquitetura%20e%20Desenho%20de%20software%20-%20Aula%20Projeto-DSW%20-%20Profa.%20Milene.pdf. Acesso em: 11/04/2025.
+
 ## Histórico de versão:
 
 | Versão | Alteração                  | Responsável     | Revisor | Data       | Detalhes da Revisão |
 | -      | -                          | -               | -       | -          | -                   |
+| 1.1    | Desenvolvimento da introdução, adição de referência | [Rodrigo Orlandi](https://github.com/orlandirodrigo) | -  | 11/04/2025  | -                   |
 | 1.0    | Elaboração do documento | [Rodrigo Gontijo](https://github.com/rodrigogontijoo) e [Vitor Pereira](https://github.com/vcpVitor)| | 09/04/2025 | |
