--- a/docs/Base/1.2.4.Glossario.md
+++ b/docs/Base/1.2.4.Glossario.md
@@ -8,7 +8,7 @@ Este glossário refere-se ao projeto Eu Sei Quero Compartilhar, uma aplicação 
 
 ## Metodologia
 
-A elaboração do glossário para a aplicação "Eu Sei Quero Compartilhar" pode ser associada à metodologia do Zachman Framework, uma abordagem de arquitetura corporativa que organiza os artefatos de um sistema com base em diferentes perspectivas (como a do planejador, dono, projetista, etc.) e interrogativas fundamentais (o que, como, onde, quem, quando e por quê). Dentro desse framework, o glossário se enquadra como um artefato da coluna "O quê" (dados) e da linha "Planejador" ou "Dono", representando uma visão conceitual dos elementos do sistema. Neste caso, os termos essenciais que descrevem os componentes e funcionalidades da aplicação, promovendo entendimento comum entre os envolvidos no projeto.
+A elaboração do glossário para a aplicação "Eu Sei Quero Compartilhar" pode ser associada à metodologia do [Zachman Framework](#Bibliografia), uma abordagem de arquitetura corporativa que organiza os artefatos de um sistema com base em diferentes perspectivas (como a do planejador, dono, projetista, etc.) e interrogativas fundamentais (o que, como, onde, quem, quando e por quê). Dentro desse framework, o glossário se enquadra como um artefato da coluna "O quê" (dados) e da linha "Planejador" ou "Dono", representando uma visão conceitual dos elementos do sistema. Neste caso, os termos essenciais que descrevem os componentes e funcionalidades da aplicação, promovendo entendimento comum entre os envolvidos no projeto.
 
 
 ### Tabela 3 - Glossáriio
