adicao de termos glossario e correcoes

--- a/docs/Base/1.2.4.Glossario.md
+++ b/docs/Base/1.2.4.Glossario.md
@@ -31,9 +31,10 @@ A elaboração do glossário para a aplicação "Eu Sei Quero Compartilhar" pode
 | **Tag(s)**           | Palavras-chave associadas a jogos ou postagens, utilizadas para facilitar a categorização e busca de conteúdo. |
 | **Título**           | Nome ou frase descritiva que identifica uma postagem. Deve ser claro e informativo. |
 | **Usuário**          | Pessoa cadastrada na aplicação, com permissão para postar guias, avaliar e comentar em postagens. |
-
-
-
+| **Desenvolvedora/Developer**          | Empresa desenvolvedora do jogo. |
+| **Publisher**          | Empresa que publica os jogos no mercado. |
+| **Player**          | Personagem ou entidade controlada diretamente pelo usuário. Ele é o ponto de interação entre o jogador e o mundo do jogo, sendo responsável por executar ações, tomar decisões e interagir com o ambiente ou com outros personagens. |
+| **Perfil**          | Conjunto de informações, configurações e permissões associadas a um determinado usuário. |
 
 ---
 
@@ -52,4 +53,5 @@ A elaboração do glossário para a aplicação "Eu Sei Quero Compartilhar" pode
 |--------|------------|------------------------------------------------|-----------------------------------------------------------|------------------------------------|
 | 1.0    | 10/04/2025 | Criação do documento                           | [Matheus Ferreira](https://github.com/matferreira1)             | [Matheus Ferreira](https://github.com/matferreira1)  |
 | 1.1    | 10/04/2025 | Alteração de léxico para glossário                          | [Matheus Ferreira](https://github.com/matferreira1)             | [Rodrigo Gontijo](https://github.com/rodrigogontijoo)  |
-| 1.2    |  11/04/2025  | Adição e Organização de Termos |[Rodrigo Gontijo](https://github.com/rodrigogontijoo) || [Matheus Ferreira](https://github.com/matferreira1)|
+| 1.2    |  11/04/2025  | Adição e Organização de Termos |[Rodrigo Gontijo](https://github.com/rodrigogontijoo) | [Joao Victor Marques](https://github.com/jmarquees)|
+| 1.3    |  11/04/2025  | Adição de Termos |[Joao Victor Marques](https://github.com/jmarquees) | [Matheus Ferreira](https://github.com/matferreira1)|
