adicionar participações base e correções no sketch

--- a/docs/Base/1.1.2.Sketch.md
+++ b/docs/Base/1.1.2.Sketch.md
@@ -1,11 +1,13 @@
 ## Introdução
 
-O Sketch é a etapa em que cada integrante da equipe expressa suas ideias por meio de desenhos, com base no que foi definido anteriormente na etapa do Unpack. O objetivo é representar visualmente soluções possíveis, levando em conta a visão individual de cada participante. Mesmo quem não tem habilidades com desenho é incentivado a contribuir. Para padronizar a representação, utiliza-se o formato de Rich Pictures, onde cada pessoa cria o modelo, de acordo com o escopo definido.
+O Sketch é a etapa em que cada integrante da equipe expressa suas ideias por meio de desenhos, com base no que foi definido anteriormente na etapa do Unpack. O objetivo é representar visualmente soluções possíveis, levando em conta a visão individual de cada participante [(SERRANO)](#referência). Mesmo quem não tem habilidades com desenho é incentivado a contribuir. Para padronizar a representação, utiliza-se o formato de Rich Pictures, onde cada pessoa cria o modelo, de acordo com o escopo definido.
 
 
 ## Metodologia
 
 Para melhor visualizar e estruturar o funcionamento do nosso projeto, empregamos a técnica de Rich Picture. Utilizamos o aplicativo GoodNotes como plataforma principal, que funcionou como um canvas digital intuitivo, permitindo-nos esboçar livremente todas as ideias e conceitos relevantes de forma colaborativa. Essa abordagem facilitou a organização e o alinhamento das informações entre os membros da equipe, transformando conceitos abstratos em representações visuais claras e eficazes.
+
+Durante a execução, a equipe havia inicialmente dividido todas as etapas da Design Sprint em uma dupla para cada, mas visto que não teria a participação de maneira desejada da equipe inteira, a etapa foi retrabalhada, de forma que cada membro realizou uma Rich Picture, e a etapa de [Decision]() levou em consideração as ideias desenvolvidas pela equipe, para então ser desenvolvida a Rich Picture final, presente neste documento.
 
 Nesta Página está apenas o Rich Picture final. Para ver todas as RichPictures desenvolvidas, veja: [Rich Pictures](1.2.3.RichPicture.md) 
 
@@ -29,5 +31,6 @@ Figura 1: Rich Picture FInal (Fonte: João Paulo Monteiro)
 
 | Versão | Alteração                  | Responsável     | Revisor | Data       | Detalhes da Revisão |
 | -      | -                          | -               | -       | -          | -                   |
+| 1.2    | Aldição na metodologia, hyperlink de referência | [Rodrigo Orlandi](https://github.com/orlandirodrigo)| | 11/04/2025 | |
 | 1.1    | Alteração da introdução e hyperlinkagem das Rich Pictures | [Rodrigo Gontijo](https://github.com/rodrigogontijoo)| | 10/04/2025 | |
 | 1.0    | Elaboração do documento | [João Paulo Monteiro](https://github.com/joaombc) | | 10/04/2025 | |
