--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -1,32 +1,94 @@
 # 1.4. Participações (Base)
 
-Breve relato sobre as participações/contribuições de cada membro à entrega. 
+Este documento esclarecerá as participações da equipe referentes à primeira entrega do projeto. Sua divisão é dada em tabelas de cada foco da Entrega 1 - [Design Sprint](1.1.DesignSprint.md#11-módulo-design-sprint), [Artefatos Generalistas](1.2.ArtefatoGeneralista.md#12-módulo-artefato-generalista) e a [modelagem dos Diagramas BPNM](#módulo-modelagem-bpmn-foco_3]), respectivamente. As tabelas são divididas da seguinte maneira:
 
-## Módulo Design Sprint (Foco_1)
+|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
+|---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
+| Fulano  |  1. Participação nas Etapas da Design Sprint elaborando artefatos | Boa | Registro nos Versionamentos do Documento de Design Sprint, conforme (link) |
 
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
+/// caption | <
+Tabela 1 — Exemplo de aplicação da participação do membro pela tabela no respectivo foco do projeto.
+///
+/// caption
+Fonte: Profa. Milene Serrano
+///
 
-EXEMPLO:
-| Fulano  |  1. Participação nas Etapas da Design Sprint elaborando artefatos | Boa | Registro nos Versionamentos do Documento de Design Sprint, conforme (link)
+Comprobatórios se darão na forma de links aos commits realizados no Github, os autores de cada documento e, quando necessário, link às gravações de reuniões realizadas no YouTube.
 
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
+<br>
 
+## Foco 1 - Módulo de Design Sprint
 
-## Módulo Artefato Generalista (Foco_2)
+|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
+|---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
+| Rodrigo Orlandi | 1 Participação na fase de Unpack; <br> 2. Participação na fase de Sketch; <br> 3. Elaboração de documentos de apoio para o projeto.          | Boa   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Contribuição no documento de Sketch [link - ADICIONAR DEPOIS DO COMMIT]; <br> 3. Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing) |
+| Rodrigo Gontijo  |    |    |   |
+| Henrique Galdino |    |    |   |
+| João Marques     |    |    |   |
+| João Paulo       |    |    |   |
+| Fernando Gabriel |    |    |   |
+| Júlio César      |    |    |   |
+| Matheus Ferreira |    |    |   |
+| Vitor Pereira    |    |    |   |
+| Igor Thiago      |    |    |   |
 
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
+/// caption | <
+Tabela 2 — Contribuições da equipe no foco de Design Sprint.
+///
+/// caption
+Fonte: Rodrigo Orlandi(Autor)
+///
 
-EXEMPLO:
-| Fulano  |  1. Elaboração do Artefato 5W2H | EXCELENTE | Registro nos Versionamentos do Documento do 5W2H, conforme (link) e Commits (links)
+<br>
 
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
+## Foco 2 - Módulo de Artefatos Generalistas 
 
+|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
+|---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
+| Rodrigo Orlandi |  1. Participação na implementação do documento de Rich Pictures e na realização; <br> 2. Implementação do 5W2H e de seu artefato <br> 3. Elaboração de documentos de apoio para o projeto. | Boa |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/5a3384140c5e16cff31b765bbf746170897725a4); <br> 2. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/61aa8c4b736dca9dc1fdbabe84ff4cee676cd871); <br> 3. Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing) |
+| Rodrigo Gontijo  |    |    |   |
+| Henrique Galdino |    |    |   |
+| João Marques     |    |    |   |
+| João Paulo       |    |    |   |
+| Fernando Gabriel |    |    |   |
+| Júlio César      |    |    |   |
+| Matheus Ferreira |    |    |   |
+| Vitor Pereira    |    |    |   |
+| Igor Thiago      |    |    |   |
 
-## Módulo Modelagem BPMN (Foco_3)
+/// caption | <
+Tabela 3 — Contribuições da equipe no foco de Artefatos Generalistas.
+///
+/// caption
+Fonte: Rodrigo Orlandi(Autor)
+///
 
-|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link)
+<br>
 
-EXEMPLO:
-| Fulano  |  1. Modelagem da atividade ATIVIDADE_X. 2. Participação no subprocesso SUBPROCESSO_Y | Regular | Registro nos Versionamentos do Documento de Modelagem BPMN, conforme (link) e debates nas Issues (links)
+## Foco 3 - Módulo de Modelagem BPMN
 
-TODOS DEVEM PARTICIPAR, MOSTRANDO SEUS PONTOS DE VISTA E COMO COLABORARAM NESSA ETAPA DA ENTREGA COM COMPROBATÓRIOS.
+|Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
+|---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
+| Rodrigo Orlandi  |    |    |   |
+| Rodrigo Gontijo  |    |    |   |
+| Henrique Galdino |    |    |   |
+| João Marques     |    |    |   |
+| João Paulo       |    |    |   |
+| Fernando Gabriel |    |    |   |
+| Júlio César      |    |    |   |
+| Matheus Ferreira |    |    |   |
+| Vitor Pereira    |    |    |   |
+| Igor Thiago      |    |    |   |
+
+/// caption | <
+Tabela 4 — Contribuições da equipe no foco de Modelagem BPNM.
+///
+/// caption
+Fonte: Rodrigo Orlandi(Autor)
+///
+
+## Histórico de versão:
+
+| Versão | Alteração                  | Responsável     | Revisor | Data       | Detalhes da Revisão |
+| -      | -                          | -               | -       | -          | -                   |
+| 1.0    | Elaboração do documento | [Rodrigo Orlandi](https://github.com/orlandirodrigo) | | 11/04/2025 | |
