--- a/docs/Base/1.1.4.Prototype.md
+++ b/docs/Base/1.1.4.Prototype.md
@@ -1,1 +1,12 @@
-# 1.1.4 Prototipar (Prototype)
+# 1.1.4 Prototipo (Prototype)
+
+## Introdução 
+Com base nos requisitos coletados durante o Design Sprint, foi elaborado um protótipo de alta fidelidade utilizando o Figma. A ferramenta permitiu a criação de componentes interativos, como botões e campos de entrada, simulando de forma próxima a experiência final do usuário.
+
+O protótipo funciona como uma prévia funcional da interface, facilitando testes de usabilidade e validação do fluxo de navegação. A validação, que em um projeto real seria feita com o cliente, foi realizada internamente, alinhando-se à fase de Test do processo de Design Sprint.
+
+## Histórico de versão:
+
+| Versão | Alteração                  | Responsável     | Revisor | Data       | Detalhes da Revisão |
+| -      | -                          | -               | -       | -          | -                   |
+| 1.0    | Elaboração do documento | [Joao Victor Marques](https://github.com/jmarquees) | [Henrique Galdino](https://github.com/hgaldino05) | 11/04/2025 | |
