--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -21,7 +21,7 @@ Comprobatórios se darão na forma de links aos commits realizados no Github, os
 
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
 |---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
-| Rodrigo Orlandi | 1 Participação na fase de Unpack; <br> 2. Participação na fase de Sketch; <br> 3. Elaboração de documentos de apoio para o projeto.          | Boa   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Contribuição no documento de Sketch [link - ADICIONAR DEPOIS DO COMMIT]; <br> 3. Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing) |
+| Rodrigo Orlandi | 1 Participação na fase de Unpack; <br> 2. Participação na fase de Sketch; <br> 3. Elaboração de documentos de apoio para o projeto.          | Boa   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Contribuição no documento de Sketch [link - ADICIONAR DEPOIS DO COMMIT]; <br> 3. Documento de Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing), Documentos gerais para ajuda em Artefatos, conforme [link](https://drive.google.com/drive/folders/11CszYz0sgpm7X65R1tsoaDXnOXYUhs17?usp=drive_link) |
 | Rodrigo Gontijo  |    |    |   |
 | Henrique Galdino |    |    |   |
 | João Marques     |    |    |   |
