correcao documento prototipo

--- a/docs/Base/1.1.4.Prototype.md
+++ b/docs/Base/1.1.4.Prototype.md
@@ -5,8 +5,18 @@ Com base nos requisitos coletados durante o Design Sprint, foi elaborado um prot
 
 O protótipo funciona como uma prévia funcional da interface, facilitando testes de usabilidade e validação do fluxo de navegação. A validação, que em um projeto real seria feita com o cliente, foi realizada internamente, alinhando-se à fase de Test do processo de Design Sprint.
 
+## Metodologia
+O protótipo foi feito com base nos Rich Pictures feitos por cada membro do grupo, e na Decisão da Design Sprint.
+
+## Protótipo
+...
+
+## Referências Bibliográficas
+> MACEDO, Gabriel. 10 heurísticas de Nilsen para o design de interface. 2 de agosto de 2017. Disponível em: https://brasil.uxdesign.cc/10-heur%C3%ADsticas-de-nielsen-para-o-design-de-interface-58d782821840?gi=8d22872687c5. Acesso em: 16 fev 2021.
+
 ## Histórico de versão:
 
 | Versão | Alteração                  | Responsável     | Revisor | Data       | Detalhes da Revisão |
 | -      | -                          | -               | -       | -          | -                   |
 | 1.0    | Elaboração do documento | [Joao Victor Marques](https://github.com/jmarquees) | [Henrique Galdino](https://github.com/hgaldino05) | 11/04/2025 | |
+| 1.1    | Adição de Correções | [Joao Victor Marques](https://github.com/jmarquees) | [Henrique Galdino](https://github.com/hgaldino05) | 11/04/2025 | |
