adição parte Julio

--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -21,13 +21,13 @@ Comprobatórios se darão na forma de links aos commits realizados no Github, os
 
 |Nome do Membro | Contribuição | Significância da Contribuição para o Projeto (Excelente/Boa/Regular/Ruim/Nula) | Comprobatórios Claros (com link) |
 |---------------|--------------|--------------------------------------------------------------------------------|---------------------------|
-| Rodrigo Orlandi | 1 Participação na fase de Unpack; <br> 2. Participação na fase de Sketch; <br> 3. Elaboração de documentos de apoio para o projeto.          | Boa   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Contribuição no documento de Sketch [link - ADICIONAR DEPOIS DO COMMIT]; <br> 3. Documento de Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing), Documentos gerais para ajuda em Artefatos, conforme [link](https://drive.google.com/drive/folders/11CszYz0sgpm7X65R1tsoaDXnOXYUhs17?usp=drive_link) |
+| Rodrigo Orlandi | 1. Participação na fase de Unpack; <br> 2. Participação na fase de Sketch; <br> 3. Elaboração de documentos de apoio para o projeto.          | Boa   |  1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); <br> 2. Contribuição no documento de Sketch [link - ADICIONAR DEPOIS DO COMMIT]; <br> 3. Documento de Reunião 1 e 2, Conforme [link](https://docs.google.com/document/d/1-L8mSf3YPFwAi2h_zZYhMdjDSgVy3QwgNp_WSID1aKo/edit?usp=sharing) e [Link](https://docs.google.com/document/d/1ZVux8FZvy8z9uvHv9_QiofOSZrNCEjRDKzJAPMBVwNA/edit?usp=sharing), Documentos gerais para ajuda em Artefatos, conforme [link](https://drive.google.com/drive/folders/11CszYz0sgpm7X65R1tsoaDXnOXYUhs17?usp=drive_link) |
 | Rodrigo Gontijo  |    |    |   |
 | Henrique Galdino |    |    |   |
 | João Marques     |    |    |   |
 | João Paulo       |    |    |   |
 | Fernando Gabriel |    |    |   |
-| Júlio César      |    |    |   |
+| Júlio César      |   1. Participação na fase de Unpack; <br> 2. Participação na fase de Decision  |  Boa  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f533d11a71168c54f6cbecb8819c4d18b251ba59)  |
 | Matheus Ferreira |    |    |   |
 | Vitor Pereira    |    |    |   |
 | Igor Thiago      |    |    |   |
@@ -51,7 +51,7 @@ Fonte: Rodrigo Orlandi(Autor)
 | João Marques     |    |    |   |
 | João Paulo       |    |    |   |
 | Fernando Gabriel |    |    |   |
-| Júlio César      |    |    |   |
+| Júlio César      |  1. Participação da implementação do Diagrama Causa-Efeito  |  Regular  |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);  |
 | Matheus Ferreira |    |    |   |
 | Vitor Pereira    |    |    |   |
 | Igor Thiago      |    |    |   |
@@ -75,7 +75,7 @@ Fonte: Rodrigo Orlandi(Autor)
 | João Marques     |    |    |   |
 | João Paulo       |    |    |   |
 | Fernando Gabriel |    |    |   |
-| Júlio César      |    |    |   |
+| Júlio César      |  1. Participação da implementação da Metodologia BPMN  |  Regular  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/36f6bd8ddf02ca1699705b84147a82bb7f2694f2);  |
 | Matheus Ferreira |    |    |   |
 | Vitor Pereira    |    |    |   |
 | Igor Thiago      |    |    |   |
@@ -92,3 +92,4 @@ Fonte: Rodrigo Orlandi(Autor)
 | Versão | Alteração                  | Responsável     | Revisor | Data       | Detalhes da Revisão |
 | -      | -                          | -               | -       | -          | -                   |
 | 1.0    | Elaboração do documento | [Rodrigo Orlandi](https://github.com/orlandirodrigo) | | 11/04/2025 | |
+| 1.1    | Adição Parte Júlio | [Julio Cesar](https://github.com/Julio1099) | | 11/04/2025 | |
