Adição Parte fernando

--- a/docs/Base/1.4.ParticipacoesBase.md
+++ b/docs/Base/1.4.ParticipacoesBase.md
@@ -26,7 +26,7 @@ Comprobatórios se darão na forma de links aos commits realizados no Github, os
 | Henrique Galdino |    |    |   |
 | João Marques     |    |    |   |
 | João Paulo       |    |    |   |
-| Fernando Gabriel |    |    |   |
+| Fernando Gabriel |1. Participação na fase de Unpack; <br> 2. Participação na fase de Decision    |  Boa  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f533d11a71168c54f6cbecb8819c4d18b251ba59)    |
 | Júlio César      |   1. Participação na fase de Unpack; <br> 2. Participação na fase de Decision  |  Boa  | 1. Reunião gravada pelo Google Meet do dia 07/04/2025, e pelo Discord no dia 10/04/2025 conforme [link](https://www.youtube.com/watch?v=E5UFk_MEU1g) e [link](https://youtu.be/u2wkCnUb_PA); 2. Commit disponivel em [link](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/f533d11a71168c54f6cbecb8819c4d18b251ba59)  |
 | Matheus Ferreira |    |    |   |
 | Vitor Pereira    |    |    |   |
@@ -50,7 +50,7 @@ Fonte: Rodrigo Orlandi(Autor)
 | Henrique Galdino |    |    |   |
 | João Marques     |    |    |   |
 | João Paulo       |    |    |   |
-| Fernando Gabriel |    |    |   |
+| Fernando Gabriel | 1. Participação da implementação do Diagrama Causa-Efeito    |  Regular   |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);   |
 | Júlio César      |  1. Participação da implementação do Diagrama Causa-Efeito  |  Regular  |  1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/6b2183f509d7f419da4af1b37a898748fafc96ff);  |
 | Matheus Ferreira |    |    |   |
 | Vitor Pereira    |    |    |   |
@@ -74,7 +74,7 @@ Fonte: Rodrigo Orlandi(Autor)
 | Henrique Galdino |    |    |   |
 | João Marques     |    |    |   |
 | João Paulo       |    |    |   |
-| Fernando Gabriel |    |    |   |
+| Fernando Gabriel | 1. Participação da implementação da Metodologia BPMN   |   Regular  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/c9d9a01fe8a395ea12e45d6a98fb288e4eb32e9e);  |
 | Júlio César      |  1. Participação da implementação da Metodologia BPMN  |  Regular  | 1. Implementação [neste commit](https://github.com/UnBArqDsw2025-1-Turma02/2025.1-T02-_G5_EuSeiQueroCompatilhar_Entrega_01/commit/36f6bd8ddf02ca1699705b84147a82bb7f2694f2);  |
 | Matheus Ferreira |    |    |   |
 | Vitor Pereira    |    |    |   |
@@ -93,3 +93,4 @@ Fonte: Rodrigo Orlandi(Autor)
 | -      | -                          | -               | -       | -          | -                   |
 | 1.0    | Elaboração do documento | [Rodrigo Orlandi](https://github.com/orlandirodrigo) | | 11/04/2025 | |
 | 1.1    | Adição Parte Júlio | [Julio Cesar](https://github.com/Julio1099) | | 11/04/2025 | |
+| 1.2    | Adição Parte fernando | [Fernando Gabriel](https://github.com/show-dawn) | | 11/04/2025 | |
