--- a/docs/Base/1.1.4.Prototype.md
+++ b/docs/Base/1.1.4.Prototype.md
@@ -12,7 +12,7 @@ O protótipo foi feito com base nos Rich Pictures feitos por cada membro do grup
 ...
 
 ## Referências Bibliográficas
-> MACEDO, Gabriel. 10 heurísticas de Nilsen para o design de interface. 2 de agosto de 2017. Disponível em: https://brasil.uxdesign.cc/10-heur%C3%ADsticas-de-nielsen-para-o-design-de-interface-58d782821840?gi=8d22872687c5. Acesso em: 16 fev 2021.
+> MACEDO, Gabriel. 10 heurísticas de Nilsen para o design de interface. 2 de agosto de 2017. Disponível em: https://brasil.uxdesign.cc/10-heur%C3%ADsticas-de-nielsen-para-o-design-de-interface-58d782821840?gi=8d22872687c5. Acesso em: 11 Abr 2025.
 
 ## Histórico de versão:
 
