padronizando titulo decision

--- a/docs/Base/1.1.3.Decision.md
+++ b/docs/Base/1.1.3.Decision.md
@@ -1,4 +1,4 @@
-# Design Sprint – Dia 3: Decidir
+# Decision
 
 ## Objetivo do Projeto
 
@@ -78,7 +78,6 @@ A ideia C obteve a maior média ponderada (5.00), destacando-se em todos os crit
 
 - Criar o storyboard (fluxo de telas ou sequência de ações do usuário).
 - Definir os componentes do protótipo.
-- Preparar para o Dia 4 – Prototipar.
 
 ## Referências
 
@@ -95,3 +94,4 @@ GV. *Design Sprint*. Disponível em: [https://www.gv.com/sprint/](https://www.gv
 | -      | -                          | -               | -       | -          | -                   |
 | 1.0    | Elaboração do documento | [Júlio Cesar](https://github.com/Julio1099) e [Fernando Gabriel](https://github.com/show-dawn)| | 10/04/2025 | |
 | 1.1    | Adiciona Referências | [Júlio Cesar](https://github.com/Julio1099) e [Fernando Gabriel](https://github.com/show-dawn)| | 10/04/2025 | |
+| 1.2    | Padronizando título | [Rodrigo Gontijo](https://github.com/rodrigogontijoo)| | 10/04/2025 | |
